--- a/templates/docker-compose.j2
+++ b/templates/docker-compose.j2
@@ -18,6 +18,7 @@ services:
     volumes:
       - ./logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml:ro
       - ./logstash/pipeline:/usr/share/logstash/pipeline:ro
+      - /etc/tls:/etc/tls:ro
     ports:
       - "127.0.0.1:{{ LOGSTASH_PORT }}:5000"
     environment:
